--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,7 @@ rvm:
   - 2.2
 gemfile:
   - gemfiles/rspec_3.3.gemfile
+  - gemfiles/rspec_3.4.gemfile
+  - gemfiles/rspec_3.5.gemfile
 cache: bundler
 sudo: false
