add support for rspec 3.6.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ gemfile:
   - gemfiles/rspec_3.3.gemfile
   - gemfiles/rspec_3.4.gemfile
   - gemfiles/rspec_3.5.gemfile
+  - gemfiles/rspec_3.6.gemfile
 cache: bundler
 sudo: false
