--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,6 @@ gemfile:
   - gemfiles/rspec_3.4.gemfile
   - gemfiles/rspec_3.5.gemfile
   - gemfiles/rspec_3.6.gemfile
+  - gemfiles/rspec_3.7.gemfile
 cache: bundler
 sudo: false
